PolicyStream_SFDC/force-app-main-default/objects/Applications_Assets__c/Applications_Assets__c.object-meta.xml
<CustomObject>
    <description>This is Junction Object</description>
    <label>Applications-Assets</label>
    <nameField>
        <displayFormat>APP_ASSID-{0000}</displayFormat>
        <label>Applications-Assets ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications-Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>