PolicyStream_SFDC/force-app-main-default/objects/Applications_Assets__c/fields/Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment__c</fullName>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>