PolicyStream_SFDC/force-app-main-default/objects/Applications_Assets__c/fields/Finance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Finance_Amount__c</fullName>
    <formula>Price__c  -  Down_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>