PolicyStream_SFDC/force-app-main-default/objects/Applications_Assets__c/fields/Select_Application__c.field-meta.xml
<CustomField>
    <fullName>Select_Application__c</fullName>
    <label>Select Application</label>
    <referenceTo>Applicant_Details__c</referenceTo>
    <relationshipLabel>Applications-Assets</relationshipLabel>
    <relationshipName>Applications_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>