PolicyStream_SFDC/force-app-main-default/objects/Applications_Assets__c/fields/Tenure_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Tenure_in_Months__c</fullName>
    <label>Tenure in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>